<resources>
    <string name="app_name">Maths Inspector</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="open">Open</string>
    <string name="user_guide">User Guide</string>
    <string name="show_fragment" translatable="false">Show Fragment</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="reset" translatable="false">C</string>
    <string name="_0" translatable="false">0</string>
    <string name="back" translatable="false"><![CDATA[<<]]></string>
    <string name="number_input">Number Input</string>
    <string name="default_number_value" translatable="false">0</string>
    <string name="modulo_of_">Modulo of %d</string>
    <string name="user_guide_text" translatable="false">How to use: \n Start by entering a number with the numpad, then enter the number to modulo by with a long press on one of the numbers. Click on the button Modulo of … and voilà.</string>
    <string name="brit_flag" translatable="false">🇬🇧</string>
    <string name="fr_flag" translatable="false">🇫🇷</string>
    <string name="invalid_result">Please input a number and a modulo</string>
    <string name="modulo_result">Modulo of %s by %d is %d</string>
    <string name="about_text">This is the Maths inspector</string>
</resources>